modulos-terraform/network_aws/database_subnets.tf



resource "aws_subnet" "databases_subnet_1a" {
  vpc_id = aws_vpc.main.id

  cidr_block        = "10.0.51.0/24"
  availability_zone = format("%s%s", var.region, "a")

  tags = {
    Name = format("%s%s", var.project_name, "-databases-subnet-1a")
  }

}

resource "aws_subnet" "databases_subnet_1b" {
  vpc_id = aws_vpc.main.id

  cidr_block        = "10.0.52.0/24"
  availability_zone = format("%s%s", var.region, "b")

  tags = {
    Name = format("%s%s", var.project_name, "-databases-subnet-1b")
  }

}

resource "aws_subnet" "databases_subnet_1c" {
  vpc_id = aws_vpc.main.id

  cidr_block        = "10.0.53.0/24"
  availability_zone = format("%s%s", var.region, "c")

  tags = {
    Name = format("%s%s", var.project_name, "-databases-subnet-1c")
  }

}
